# grg-sphinx-theme

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: test.yml
src/dipy_sphinx_theme/: __init__.py
src/grg_sphinx_theme/: __init__.py  header.py  team.py
src/grg_sphinx_theme/tests/: test_header.py
src/grg_sphinx_theme/theme/grg_sphinx_theme/: layout.html  team.html  theme.conf
src/grg_sphinx_theme/theme/grg_sphinx_theme/components/: contributors.html  footer-sections.html  footer-sign-up.html  navbar-links.html
src/grg_sphinx_theme/theme/grg_sphinx_theme/sections/: footer.html  header.html
src/grg_sphinx_theme/theme/grg_sphinx_theme/static/scripts/components/: toctree.js
src/grg_sphinx_theme/theme/grg_sphinx_theme/static/styles/: animations.css  grg-sphinx-theme.css  override.css  variables.css
src/grg_sphinx_theme/theme/grg_sphinx_theme/static/styles/components/: blog.css  footer.css  navbar.css  team.css
