# [build-system]
# requires = ["sphinx-theme-builder >= 0.2.0a7"]
# build-backend = "sphinx_theme_builder"

# [tool.sphinx-theme-builder]
# node-version = "16.13.2"
# theme-name = "grg_sphinx_theme"


[project]
name = "grg-sphinx-theme"
description = "A GRG sphinx theme to use across GRG projects"
dynamic = ["version"]
readme = "README.md"

requires-python = ">=3.7"
dependencies = [
  "sphinx>=4",
  "pydata-sphinx-theme==0.13.3",
]

license = { file = "LICENSE" }
# TODO: Add email of the maintainer
maintainers = [
  { name = "GRG web team" },
]

[project.entry-points]
"sphinx.html_themes" = { grg_sphinx_theme = "grg_sphinx_theme" }